# Ape-Server

./: .gitignore  CMakeLists.txt  compile_commands.json  install_dependencies.sh  vcpkg.json
docker/: README.md
docker/etcd/: docker-compose.yml
docker/kafka/: docker-compose.yml  startup.sh
docker/mongodb/: docker-compose.yml  init-mongo.js
docker/mysql/: docker-compose.yml  init.sql
docker/otel/: docker-compose.yml  otel-collector-config.yaml  startup.sh
docker/otel/grafana/dashboards/: ape-im-overview.json
docker/otel/grafana/provisioning/dashboards/: dashboards.yaml
docker/otel/grafana/provisioning/datasources/: datasources.yaml
docker/redis/: docker-compose.yml  redis-master.conf  redis-slave.conf  sentinel.conf
docker/redis/redis_data_master/: dump.rdb
docker/redis/redis_data_master/appendonlydir/: appendonly.aof.1.base.rdb
docker/redis/redis_data_slave_1/: dump.rdb
docker/redis/redis_data_slave_1/appendonlydir/: appendonly.aof.2.base.rdb  appendonly.aof.5.base.rdb
docker/redis/redis_data_slave_2/: dump.rdb
docker/redis/redis_data_slave_2/appendonlydir/: appendonly.aof.2.base.rdb  appendonly.aof.2.incr.aof  appendonly.aof.3.base.rdb  appendonly.aof.5.base.rdb
docs/: observability-plan.md
include/gateway/: connmanager.h  session.h  webserver.h  ws_session.h  ws_session_manager.h
include/messagequeue/: kafkaconsumer.h  kafkahandler.h  kafkaproducer.h
include/proto/: conversation.grpc.pb.h  conversation.pb.h  msg.grpc.pb.h  msg.pb.h  push.grpc.pb.h  push.pb.h  sdkws.grpc.pb.h  sdkws.pb.h
include/services/: base_service.h  etcd_service_register.h
include/services/auth_service/: client.h  server.h
include/services/backbon_service/: client.h  server.h  start_server.h
include/services/gateway_push_service/: client.h  server.h
include/services/msg_service/: client.h  server.h
include/services/push_service/: client.h  offline_msg_handler.h  push_msg_handler.h  server.h
include/services/register/: base_register_service.h  etcd_service_register.h
include/services/register_discovery/: base_register_service.h  etcd_service_discovery.h  etcd_service_register.h  rpc_call_manager.h
include/user/: userinfo.h
include/util/: etcdconnector.h  mongoconnector.h  mongohandler.h  mysqlconnector.h  mysqlhandler.h  otel_grpc_interceptor.h  otel_logger.h  otel_metrics.h  otel_trace_propagation.h  otel_tracer.h  redisconnector.h  redishandler.h  snowflake.h  spdlog_otel_sink.h  threadpool.h  uuid.h
proto/: Readme.md  apeauth.proto  auth.proto  backbon.proto  conversation.proto  gateway_push.proto  msg.proto  push.proto  sdkws.proto
scripts/: dockerup.sh  long_conn_test.sh  send_trace_demo.py
src/: main.cpp
src/gateway/: connmanager.cpp  session.cpp  webserver.cpp  ws_session.cpp  ws_session_manager.cpp
src/messagequeue/: ReadMe.md  kafkaconsumer.cpp  kafkaproducer.cpp  kfakahandler.cpp
src/proto/: Readme.md  apeauth.grpc.pb.cc  apeauth.grpc.pb.h  apeauth.pb.cc  apeauth.pb.h  auth.grpc.pb.cc  auth.grpc.pb.h  auth.pb.cc  auth.pb.h  backbon.grpc.pb.cc  backbon.grpc.pb.h  backbon.pb.cc  backbon.pb.h  conversation.grpc.pb.cc  conversation.grpc.pb.h  conversation.pb.cc  conversation.pb.h  gateway_push.grpc.pb.cc  gateway_push.grpc.pb.h  gateway_push.pb.cc  gateway_push.pb.h  msg.grpc.pb.cc  msg.grpc.pb.h  msg.pb.cc  msg.pb.h  push.grpc.pb.cc  push.grpc.pb.h  push.pb.cc  push.pb.h  sdkws.grpc.pb.cc  sdkws.grpc.pb.h  sdkws.pb.cc  sdkws.pb.h
src/services/: etcd_service_register.cpp
src/services/auth_service/: client.cpp  server.cpp
src/services/backbon_service/: client.cpp  server.cpp
src/services/gateway_push_service/: client.cpp  server.cpp
src/services/msg_service/: client.cpp  server.cpp  startup.cpp
src/services/push_service/: client.cpp  offline_msg_handler.cpp  push_msg_handler.cpp  server.cpp
src/services/register/: etcd_service_register.cpp
src/services/register_discovery/: etcd_service_discovery.cpp  etcd_service_register.cpp  rpc_call_manager.cpp
src/util/: mongoconnector.cpp  mongohandler.cpp  mysqlconnector.cpp  mysqlhandler.cpp  otel_grpc_interceptor.cpp  otel_logger.cpp  otel_metrics.cpp  otel_trace_propagation.cpp  otel_tracer.cpp  redisconnector.cpp  redishandler.cpp  snowflake.cpp  spdlog_otel_sink.cpp  threadpool.cpp
test/: CMakeLists.txt  testAll.cpp  test_MQ.cpp  test_backbon_service.cpp  test_msg_service.cpp  test_threadpool.cpp
test/ServiceQPStest/: Readme.md
tmp/: client.cpp  cpp_refactor_plan.md  example_impl.cpp  messageservice.h  server.cpp
